--- a/lib/nfl_rushing_web/templates/layout/root.html.leex
+++ b/lib/nfl_rushing_web/templates/layout/root.html.leex
@@ -13,7 +13,7 @@
     <header>
       <section class="container">
         <nav role="navigation">
-          <h1>NFL Rushing</h1>
+          <a href="/"><h1>NFL Rushing</h1></a>
         </nav>
       </section>
     </header>
