add mock happy path case

--- a/lib/nfl_rushing_web/live/rushing_team_statistics_live.html.leex
+++ b/lib/nfl_rushing_web/live/rushing_team_statistics_live.html.leex
@@ -5,6 +5,14 @@
 </section>
 <section name="statistics" class="row">
   <table>
-    <tr><th></th></tr>
+    <tr>
+      <th>Team</th>
+      <th>Total Yds</th>
+      <th>Lng</th>
+    </tr>
+    <tr>
+      <td>NYG</td>
+      <td>150</td>
+      <td>10T</td>
   </table>
 </section>
